// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page page-limited"
>
  <withRouter(TutorialSelection)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    currentUser={
      {
        "dismissedNotices": {
          "educationPrinciples": false,
        },
        "groups": [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": [],
      }
    }
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="page page-limited"
>
  <withRouter(TutorialSelection)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    currentUser={
      {
        "dismissedNotices": {
          "educationPrinciples": false,
        },
        "groups": [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": [],
      }
    }
    projectBinding={
      {
        "alm": "azure",
        "key": "foo",
        "monorepo": false,
        "repository": "REPOSITORY_NAME",
        "slug": "PROJECT_NAME",
        "url": "https://ado.my_company.com/mycollection",
      }
    }
  />
</div>
`;
